2012-08-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* ld-mips-elf/mode-change-error-1.d: Update the error message.

2012-08-02  Maciej W. Rozycki  <macro@codesourcery.com>

	* ld-mips-elf/got-vers-1.rd: Fix a typo.

2012-08-01  James Lemke  <jwlemke@codesourcery.com>

	* ld-gc/pr13683.d: XFAIL for powerpc*-*-eabivle.

2012-07-31  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/fini0.s: Indent global directive.
	* ld-elf/foo0.s: Likewise.
	* ld-elf/init0.s: Likewise.

	* ld-elf/pr14156c.t: Keep text section.

2012-07-26  Meador Inge  <meadori@codesourcery.com>

	PR ld/14397
	* ld-arm/arm-elf.exp: Add tests of linking without .rel.plt.
	* ld-arm/arm-no-rel-plt.out: Linker script without .rel.plt section.
	* ld-arm/arm-no-rel-plt.out: Expected output.

2012-07-13  Hans-Peter Nilsson  <hp@axis.com>

	* ld-elf/foo0.s: Use ARM-compatible .section syntax.
	* ld-elf/foo1.s: Likewise.
	* ld-elf/foo2.s: Likewise.
	* ld-elf/foo3.s: Likewise.
	* ld-elf/foon.s: Likewise.

2012-07-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/14156
	* ld-elf/fini0.s: New file.
	* ld-elf/fini1.s: Likewise.
	* ld-elf/fini2.s: Likewise.
	* ld-elf/fini3.s: Likewise.
	* ld-elf/finin.s: Likewise.
	* ld-elf/foo0.s: Likewise.
	* ld-elf/foo1.s: Likewise.
	* ld-elf/foo2.s: Likewise.
	* ld-elf/foo3.s: Likewise.
	* ld-elf/foon.s: Likewise.
	* ld-elf/init0.s: Likewise.
	* ld-elf/init1.s: Likewise.
	* ld-elf/init2.s: Likewise.
	* ld-elf/init3.s: Likewise.
	* ld-elf/initn.s: Likewise.
	* ld-elf/pr14156a.d: Likewise.
	* ld-elf/pr14156b.d: Likewise.
	* ld-elf/pr14156c.d: Likewise.
	* ld-elf/pr14156c.t: Likewise.

2012-07-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/14323
	* ld-elf/pr14323-1.c: New.
	* ld-elf/pr14323-2.c: Likewise.

	* ld-elf/shared.exp (build_tests): Add libpr14323-2.so.
	(run_tests): Add pr14323.

2012-07-03  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/3351
	* ld-elf/indirect.exp: New file.
	* ld-elf/indirect1a.c: Likewise.
	* ld-elf/indirect1b.c: Likewise.
	* ld-elf/indirect1c.c: Likewise.