@@ -41,14 +41,19 @@ proc at_least_gcc_version { major minor } {
     set state [remote_exec host $CC --version]
     set tmp "[lindex $state 1]\n"
     # Look for (eg) 4.6.1 in the version output.
-    regexp " .* (\[1-9\])\\.(\[0-9\])\\.\[0-9\]* .*" "$tmp" fred maj min
+    set ver_re "\[^\\.0-9\]+(\[1-9\]\[0-9\]*)\\.(\[0-9\]+)(?:\\.\[0-9\]+)?"
+    regexp $ver_re $tmp fred maj min
     verbose "gcc version: $tmp"
+    if { ![info exists maj] || ![info exists min] } then {
+	perror "can't decipher gcc version number, fix the framework!"
+	return 0
+    }
     verbose "major gcc version is $maj, want at least $major"
     if { $maj == $major } then {
 	verbose "minor gcc version is $min, want at least $minor"
-	return [expr  $min >= $minor ]
+	return [expr $min >= $minor]
     } else {
-	return [expr $maj > $major ]
+	return [expr $maj > $major]
     }
 }
 
